# budgeting-app

./: Cargo.toml  README.md
src/: controller.rs  main.rs  model.rs  view.rs
src/controller/: commands.rs  keymap.rs  mod.rs  popup.rs  trie.rs
src/controller/popup/: defaults.rs  mod.rs
src/model/: error.rs  mod.rs  sheets.rs
src/view/: mod.rs  rendering.rs  states.rs
